--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <dd class="field-even"><p>1区3-303</p>
 </dd>
 <dt class="field-odd">教材</dt>
-<dd class="field-odd"><p>《MATLAB教程》R2014a（2015年修订）  2015年印刷,张志涌等编著，北京航空航天大学出版社</p>
+<dd class="field-odd"><p>《MATLAB教程》R2018a，张志涌，杨祖樱.  北京航空航天大学出版社，2015</p>
 </dd>
 <dt class="field-even">上课课件</dt>
 <dd class="field-even"><p></p></dd>
